--- a/CycleGAN.ipynb
+++ b/CycleGAN.ipynb
@@ -10,41 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From c:\\Users\\92919\\miniconda3\\envs\\aim\\lib\\site-packages\\keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\92919\\miniconda3\\envs\\aim\\lib\\site-packages\\tensorflow_addons\\utils\\tfa_eol_msg.py:23: UserWarning: \n",
-      "\n",
-      "TensorFlow Addons (TFA) has ended development and introduction of new features.\n",
-      "TFA has entered a minimal maintenance and release mode until a planned end of life in May 2024.\n",
-      "Please modify downstream libraries to take dependencies from other repositories in our TensorFlow community (e.g. Keras, Keras-CV, and Keras-NLP). \n",
-      "\n",
-      "For more information see: https://github.com/tensorflow/addons/issues/2807 \n",
-      "\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\92919\\miniconda3\\envs\\aim\\lib\\site-packages\\tensorflow_addons\\utils\\ensure_tf_install.py:53: UserWarning: Tensorflow Addons supports using Python ops for all Tensorflow versions above or equal to 2.12.0 and strictly below 2.15.0 (nightly versions are not supported). \n",
-      " The versions of TensorFlow you are currently using is 2.15.0 and is not supported. \n",
-      "Some things might work, some things might not.\n",
-      "If you were to encounter a bug, do not file an issue.\n",
-      "If you want to make sure you're using a tested and supported configuration, either change the TensorFlow version or the TensorFlow Addons's version. \n",
-      "You can find the compatibility matrix in TensorFlow Addon's readme:\n",
-      "https://github.com/tensorflow/addons\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import tensorflow as tf\n",
     "from tensorflow import keras\n",
@@ -55,8 +23,7 @@
     "import numpy as np\n",
     "import cv2\n",
     "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
-    "import os\n",
-    "\n"
+    "import os"
    ]
   },
   {
